--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,23 @@
     transform: rotate(360deg);
   }
 }
+.fullscreencard{
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.123);
+  align-items: center;
+}
+.glasscard{
+  height: auto;
+  width: auto;
+  border-radius: 6px;
+  /* border: 1px solid rgb(255, 0, 0); */
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.432);
+}
+.glass{
+  backdrop-filter: blur(10px) saturate(200%);
+  -webkit-backdrop-filter: blur(10px) saturate(200%);
+}
