--- a/src/App.css
+++ b/src/App.css
@@ -56,3 +56,7 @@
   backdrop-filter: blur(10px) saturate(200%);
   -webkit-backdrop-filter: blur(10px) saturate(200%);
 }
+.spinner{
+  height: 100px;
+  width: 100px;
+}
